--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -9,15 +9,15 @@ nav:
 
 # Menu 目錄
 menu:
-  Home: / || fas fa-home
-  Archives: /archives/ || fas fa-archive
-  Tags: /tags/ || fas fa-tags
-  Categories: /categories/ || fas fa-folder-open
+  主页: / || fas fa-home
+  归档: /archives/ || fas fa-archive
+  标签: /tags/ || fas fa-tags
+  分类: /categories/ || fas fa-folder-open
   #List||fas fa-list:
   #Music: /music/ || fas fa-music
   #Movie: /movies/ || fas fa-video
-  Link: /link/ || fas fa-link
-  About: /about/ || fas fa-heart
+  友链: /link/ || fas fa-link
+  关于我: /about/ || fas fa-heart
 
 # Code Blocks (代碼相關)
 # --------------------------------------
@@ -88,7 +88,14 @@ cover:
   # When cover is not set, the default cover is displayed (當沒有設置cover時，默認的封面顯示)
   default_cover:
     # - https://i.loli.net/2020/05/01/gkihqEjXxJ5UZ1C.jpg
-
+    - https://cdn.pixabay.com/photo/2022/08/05/05/59/korea-7366036_960_720.jpg
+    - https://cdn.pixabay.com/photo/2021/09/05/16/48/rapeseed-6599950_960_720.jpg
+    - https://cdn.pixabay.com/photo/2022/08/31/13/05/sea-7423274_960_720.jpg
+    - https://lmy-1311156074.cos.ap-nanjing.myqcloud.com/test/wallhaven-yxmm3g_1920x1080.png
+    - https://lmy-1311156074.cos.ap-nanjing.myqcloud.com/test/wallhaven-yxjppd_1920x1080.png
+    - https://lmy-1311156074.cos.ap-nanjing.myqcloud.com/test/wallhaven-m3dqj8_1920x1080.png
+    - https://lmy-1311156074.cos.ap-nanjing.myqcloud.com/test/wallhaven-gpjo6e_1920x1080.png
+    - https://lmy-1311156074.cos.ap-nanjing.myqcloud.com/test/wallhaven-gp88dq_1920x1080.png
 # Replace Broken Images (替換無法顯示的圖片)
 error_img:
   flink: /img/friend_404.gif
@@ -230,11 +237,11 @@ aside:
     button:
       enable: true
       icon: fab fa-github
-      text: Follow Me
-      link: https://github.com/xxxxxx
+      text: Star
+      link: https://github.com/zhengzhengzzzz
   card_announcement:
     enable: true
-    content: This is my Blog
+    content: 分享开发经验
   card_recent_post:
     enable: true
     limit: 5 # if set 0 will show all
